HTML/CSS adding content section about

--- a/css/css.css
+++ b/css/css.css
@@ -120,3 +120,62 @@ MENU
   content:"—";
   margin-right: 15px;
 }
+
+/* ---------
+  ABOUT
+--------- */
+
+.section__about{
+
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+}
+
+.about__inner{
+  width: 100%;
+  max-width: 1200px;
+  padding: 100px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+}
+
+.about__content{
+  padding: 0 20px 20px 20px;
+  box-sizing: border-box;
+  color: #aa0062;
+  display: flex;
+  flex-direction: column;
+}
+
+.about__title{
+  font-weight: 700;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.about__text{
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: justify;
+}
+
+.about__networks{
+  align-self: flex-end;
+  padding-top: 20px;
+}
+
+.about__social{
+  display: inline-block;
+  margin-right: 10px;
+}
+.about__links{
+  color: #aa0062;
+  transition: color ease 0.7s ;
+}
+
+.about__links:hover{
+  color:#700141;
+}
